--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "next": "^8.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-entypo": "^1.3.0",
     "simple-peer": "^9.3.0",
     "simple-signal-client": "^2.1.0",
     "socket.io": "^2.2.0",
