--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   "dependencies": {
     "getusermedia": "^2.0.1",
     "next": "^8.0.4",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-entypo": "^1.3.0",
     "simple-peer": "^9.3.0",
     "simple-signal-client": "^2.1.0",
     "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "uuid": "^3.3.2",
     "wrtc": "^0.3.7"
   }
