--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "socket.io": "^2.2.0",
     "socket.io-client": "^2.2.0",
     "uuid": "^3.3.2",
+    "webrtc-adapter": "^7.2.3",
     "wrtc": "^0.3.7"
   }
 }
